# LearnOpenGLWithCMake

./: .gitignore  .gitmodules  README.md
01_CreateWindow/: CMakeLists.txt
01_Subdirectory/: ReadMe.md
02_DynamicAndInstall/: CMakeLists.txt  CMakePresets.json  ReadMe.md
02_DynamicAndInstall/3rd/glfw/: CMakeLists.txt
03_CMakePresetsAndVcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ReadMe.md  vcpkg.json
